--- a/flex.html
+++ b/flex.html
@@ -8,34 +8,12 @@
 	</head>
 
 	<body>
-		<div class="container">
-			<div class="house">
-				<div class="roof"></div>
-					<div class="window"></div>
-					<div class="window2"></div>
-					<div class="door"></div>
-				</div>
-			<div class="house2">
-				<div class="roof"></div>
-					<div class="window"></div>
-					<div class="window2"></div>
-					<div class="door"></div>
-				</div>
-			<div class="house3">
-				<div class="roof"></div>
-					<div class="window"></div>
-					<div class="window2"></div>
-					<div class="door"></div>
-				</div>
-			<div class="house4">
-				<div class="roof"></div>
-					<div class="window"></div>
-					<div class="window2"></div>
-					<div class="door"></div>
-				</div>
-		</div>
-
-
+		<div class="house">
+			<div class="roof"></div>
+				<div id="window"></div>
+				<div id="door"></div>
+			</div>
+			</div>
 	</body>
 
 </html>
